// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endpoint dialog local 1`] = `
Object {
  "input": Object {
    "choice": "local",
    "folderName": "some-folder",
    "localClusterRunning": false,
    "loggedIn": false,
  },
  "result": Object {
    "cluster": Object {
      "baseUrl": "http://localhost:4466",
      "clusterSecret": undefined,
      "isPrivate": false,
      "local": true,
      "name": "local",
      "shared": false,
      "workspaceSlug": undefined,
    },
    "database": undefined,
    "datamodel": "type User {
  id: ID! @unique
  name: String!
}
",
    "dockerComposeYml": "version: '3'
services:
  prisma:
    image: prismagraphql/prisma:experimental
    restart: always
    ports:
    - \\"4466:4466\\"
    environment:
      CLUSTER_ADDRESS: \\"\\"
      SCHEMA_MANAGER_SECRET: \\"\\"
      SCHEMA_MANAGER_ENDPOINT: \\"\\"
      BUGSNAG_API_KEY: \\"\\"
      PRISMA_CONFIG: |
        port: 4466
",
    "endpoint": "http://localhost:4466",
    "localClusterRunning": false,
    "service": "default",
    "stage": "default",
    "workspace": undefined,
  },
}
`;

exports[`endpoint dialog local running 1`] = `
Object {
  "input": Object {
    "choice": "local",
    "folderName": "some-folder",
    "localClusterRunning": true,
    "loggedIn": false,
  },
  "result": Object {
    "cluster": Object {
      "baseUrl": "http://localhost:4466",
      "clusterSecret": undefined,
      "isPrivate": false,
      "local": true,
      "name": "local",
      "shared": false,
      "workspaceSlug": undefined,
    },
    "database": undefined,
    "datamodel": "type User {
  id: ID! @unique
  name: String!
}
",
    "dockerComposeYml": "version: '3'
services:
  prisma:
    image: prismagraphql/prisma:experimental
    restart: always
    ports:
    - \\"4466:4466\\"
    environment:
      CLUSTER_ADDRESS: \\"\\"
      SCHEMA_MANAGER_SECRET: \\"\\"
      SCHEMA_MANAGER_ENDPOINT: \\"\\"
      BUGSNAG_API_KEY: \\"\\"
      PRISMA_CONFIG: |
        port: 4466
",
    "endpoint": "http://localhost:4466",
    "localClusterRunning": true,
    "service": "default",
    "stage": "default",
    "workspace": undefined,
  },
}
`;
